src/components/Hero/CenteredContent/index.module.scss
@use '@scss/common' as *;

.container {
  position: relative;
  padding-top: calc(var(--base) * 8.65);
  padding-bottom: calc(var(--base) * 8.65);

  @include large-break {
    padding-top: calc(var(--base) * 6);
    padding-bottom: calc(var(--base) * 6);
  }

  @include mid-break {
    padding-top: calc(var(--base) * 3);
    padding-bottom: calc(var(--base) * 3);
  }
}

.content {
  /* Provides space for the overflow of content over the grid lines */
  padding-left: 1px;
}

.label {
  margin-bottom: calc(var(--base) * 2);
  display: block;

  @include mid-break {
    margin-bottom: calc(var(--base) * 1);
  }

   & label {
      margin-top: 0;
      margin-bottom: 0;
   }
}

.richText {
  margin-bottom: calc(var(--base) * 2);

  @include small-break {
    margin-bottom: var(--base);
  }
}

.links {
  display: flex;
  flex-direction: column;
}

